# VegaGame

./: Actor.cpp  Actor.hpp  CMakeLists.txt  EP.cpp  Map.cpp  Map.hpp  README.md  VegaGame.sln
Doc/: Classes.uml  ReportVegaGame.doc
Src/: Actor.cpp  Actor.hpp  EP.cpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  Map.cpp  Map.h  Teacher.cpp  Teacher.h  Teacher.hpp  VegaGame.vcxproj  VegaGame.vcxproj.filters
UML Diag/: Диаграмма прицедентов.uml
